stage 1 index, music and styles.css fixed navbar, footer and item2 alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
-      #nav ul {
+      #nav {
+        margin-left:20px;
+        display: block;
+      }
+
+      ul {
         list-style-type: none;
-        margin: 0;
+      }
+
+      #nav ul {
+        text-align: right;
+        list-style-type: none;
+        margin: 0px 50px 50px 50px;
         padding: 0;
       }
       
-      a {
-        display: block;
-        width: 80px;
+      #nav li {
+        display: inline-block;
+        width: 100px;
+
       }
 
       #header {
@@ -21,16 +32,12 @@
         font-weight: 0.5em;
       }
 
-      #nav {
-        margin-left:20px;
-        display: block;
-      }
 
       #footer {
         background:grey;
         width:100%;
         height:50px;
-        position:absolute;
+        position:relative;
         bottom:0;
         left:0;
       }
@@ -41,8 +48,8 @@
       }
 
       #Sudden {
-        display: inline;
-        height: 500px;
+        display: block;
+        height: 350px;
       }
 
       #break {
@@ -52,6 +59,17 @@
       }
       #Personal {
         display: block;
+        height: 350px;
+      }
+
+      #Music_1 {
+        display: block;
+        height: 350px;        
+      }
+
+      #Music_2 {
+        display: block;
+        height: 350px;        
       }
 
       img {
